# chinese-chess

./: CNAME  Cargo.toml  index.html  start
.cargo/: config.toml
src/: chess_game.rs  chess_gird.rs  chess_piece.rs  chessboard.rs  chessplaceholder.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
static/: chinese-chess.d.ts  chinese-chess.js  chinese-chess_bg.wasm.d.ts  index.html
