[package]
name = "src-tauri-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
yew = "0.19"

once_cell = "1.5.2"
yew-router = "0.16"
wasm-logger = "0.2"
log = "0.4"
[dependencies.stylist]
version = "0.10.1"
features = [
    "yew_integration",
    "yew_use_media_query",
]
[dependencies.web-sys]
version = "0.3.59"
features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
    "Window",
    "Element",
]
[workspace]
members = ["src-tauri"]
