[package]
name = "chinese-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0" }
ggrs = "0.9"
bevy_ggrs = { version = "0.10", features = ["wasm-bindgen"] }
matchbox_socket = { version = "0.4", features = ["ggrs-socket"] }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3